5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1638_651.log
== TEST (2019-04-15 22:24:55) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "M".upper()):
	print((62.1 * altura)- 44.7)
	
else:
	print((72.7 * altura)-58 )
-- OUTPUT:
14.700000000000003
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:25:14) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "M".upper()):
	print((62.1 * altura)- 44.7)
	
else:
	print((72.7 * altura)-58 )
-- EXECUTION TIME:
0.126871
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.700000000000003
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.931399999999996
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:25:42) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "M".upper()):
	print(round((62.1 * altura)- 44.7), 2)
	
else:
	print(round((72.7 * altura)-58 ), 2)
-- OUTPUT:
15 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:27:04) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "M".upper()):
	print(round(((62.1 * altura)- 44.7), 2)
	
else:
	print(round(((72.7 * altura)-58), 2) )
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:27:19) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "M".upper()):
	print(round(((62.1 * altura)- 44.7), 2))
	
else:
	print(round(((72.7 * altura)-58), 2) )
-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:27:25) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "M".upper()):
	print(round(((62.1 * altura)- 44.7), 2))
	
else:
	print(round(((72.7 * altura)-58), 2) )
-- EXECUTION TIME:
0.18464
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.93
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:27:31) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "M".upper()):
	print(round(((62.1 * altura)- 44.7), 2))
	
else:
	print(round(((72.7 * altura)-58), 2))
-- EXECUTION TIME:
0.12724
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.93
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:27:33) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "M".upper()):
	print(round(((62.1 * altura)- 44.7), 2))
	
else:
	print(round(((72.7 * altura)-58), 2))
-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:27:40) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "M".upper()):
	print(round(((62.1 * altura)- 44.7), 2))
	
else:
	print(round(((72.7 * altura)-58), 2))
-- EXECUTION TIME:
0.147664
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.93
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:27:50) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "m".upper()):
	print(round(((62.1 * altura)- 44.7), 2))
	
else:
	print(round(((72.7 * altura)-58), 2))
-- EXECUTION TIME:
0.140658
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.93
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:27:50) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "m".upper()):
	print(round(((62.1 * altura)- 44.7), 2))
	
else:
	print(round(((72.7 * altura)-58), 2))
-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:27:56) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "m".upper()):
	print(round(((62.1 * altura)- 44.7), 2))
	
else:
	print(round(((72.7 * altura)-58), 2))
-- EXECUTION TIME:
0.136555
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.93
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:29:14) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "m".upper()):
	m = (62.1 * altura) - 44.7
	print(round(m, 2))
	
else:
	h = (72.7 * altura) - 58
	print(round(h, 2))
-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:29:20) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "m".upper()):
	m = (62.1 * altura) - 44.7
	print(round(m, 2))
	
else:
	h = (72.7 * altura) - 58
	print(round(h, 2))
-- EXECUTION TIME:
0.182449
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.93
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:29:25) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "M".upper()):
	m = (62.1 * altura) - 44.7
	print(round(m, 2))
	
else:
	h = (72.7 * altura) - 58
	print(round(h, 2))
-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:29:34) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "M".upper()):
	m = (62.1 * altura) - 44.7
	print(round(m, 2))
	
else:
	h = (72.7 * altura) - 58
	print(round(h, 2))
-- EXECUTION TIME:
0.243623
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.93
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:29:44) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == m.upper()):
	m = (62.1 * altura) - 44.7
	print(round(m, 2))
	
else:
	h = (72.7 * altura) - 58
	print(round(h, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(sexo == m.upper()):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:30:11) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "m".upper()):
	mu = (62.1 * altura) - 44.7
	print(round(mu, 2))
	
else:
	h = (72.7 * altura) - 58
	print(round(h, 2))
-- OUTPUT:
14.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:30:17) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "m".upper()):
	mu = (62.1 * altura) - 44.7
	print(round(mu, 2))
	
else:
	h = (72.7 * altura) - 58
	print(round(h, 2))
-- EXECUTION TIME:
0.251926
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.93
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:30:17) 
-- CODE:
altura = float(input("Qual a Altura? "))
sexo = input("Qual o sexo? (M/F)")

if(sexo == "m".upper()):
	mu = (62.1 * altura) - 44.7
	print(round(mu, 2))
	
else:
	h = (72.7 * altura) - 58
	print(round(h, 2))
-- EXECUTION TIME:
0.156596
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
14.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.93
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
